# CodeGeeX2-6B-QtCreator-Plugin

./: CMakeLists.txt  CodeGeeX2.json.in  CodeGeeX2_zh_CN.ts  README.md  codegeex2.qrc  codegeex2client.cpp  codegeex2client.h  codegeex2clientinterface.cpp  codegeex2clientinterface.h  codegeex2constants.h  codegeex2hoverhandler.cpp  codegeex2hoverhandler.h  codegeex2icons.h  codegeex2optionspage.cpp  codegeex2optionspage.h  codegeex2plugin.cpp  codegeex2plugin.h  codegeex2projectpanel.cpp  codegeex2projectpanel.h  codegeex2settings.cpp  codegeex2settings.h  codegeex2suggestion.cpp  codegeex2suggestion.h  codegeex2tr.h
requests/: getcompletions.h
